started styling contact page

--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -11,43 +11,32 @@
         </div>
     </section>
 
-    <section class="contacts-info">
-        <div class="container">
-            <div class="content">
-
-                <div class="row info-display">
-                    <div class="col-md-4">
-                        <div class="info linkedin">
-                            <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
-                              <i class="fa fa-linkedin-square fa-3x"></i>
-                              linkedIn
-                            </a>
-                        </div>
-                    </div>
+<section class="contacts-info">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-4">
+              <div class="info-container">
+                <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
+                    <p>LinkedIn</p>
+                    <i class="fa fa-linkedin-square fa-3x"></i>
+                </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="info-container">
+                  <a href="https://github.com/Yanwenwang">
+                    <p>Github</p>
+                    <i class="fa fa-github-square fa-3x"></i>
+                  </a>
+              </div>
+            </div>
+            <div class="col-md-4">
+                <div class="info-container">
+                    <p>Email</p>
+                    <i class="fa fa-envelope-o fa-3x"></i>
                 </div>
-
-                <div class="row info-display">
-                    <div class="col-md-4">
-                        <div class="info github">
-                            <a href="https://github.com/Yanwenwang">
-                              <i class="fa fa-github-square fa-3x"></i>
-                              Github
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                
-                <div class="row info-display">
-                    <div class="col-md-4">
-                        <div class="info email">
-                          <i class="fa fa-envelope-o fa-3x"></i>
-                          yanwenwwang@gmail.com
-                        </div>
-                    </div>
-                </div>
-
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
 </div>
