imported modal scss partial

--- a/src/main.scss
+++ b/src/main.scss
@@ -63,5 +63,4 @@
 @import "app/shared/scss/headings";
 @import "app/shared/scss/nav";
 @import "app/tic-tac-toe/scss/tic-tac-toe";
-
-
+@import "app/shared/scss/modal";
