--- a/src/app/contact/scss/_contact.scss
+++ b/src/app/contact/scss/_contact.scss
@@ -14,8 +14,8 @@
         }
 
         @media screen and (max-width: $screen-sm-max) {
-            background: url("../content/images/contact-phone.jpg");
-            background-size: cover;
+            //background: url("../content/images/contact-phone.jpg");
+            //background-size: cover;
 
             h1 {
                 text-align: center;
@@ -24,8 +24,9 @@
         }
 
         @media screen and (min-width: $screen-md-min) {
-            background: url("../content/images/contact-desktop.jpg");
-            background-size: cover;
+            //background: url("../content/images/contact-desktop.jpg");
+            //background-size: cover;
+            @include gradient-horizontal($accent-hover, $primary-light);
 
             h1 {
                 font-size: 90px;
@@ -43,16 +44,30 @@
       .info-container {
         height: 360px;
         width:260px;
-        border: 1px solid black;
         border-radius: 5px;
         display: inline-block;
+        background: $primary-light;
 
+        &:hover {
+          background: #de6262;
+        }
+      }
+
+      .info-container a {
+        text-decoration: none;
+      }
+
+      .info-container i {
+        font-size: 137px;
+        margin-top: 60px;
+        color: $primary;
       }
 
       p {
-        border-bottom: 1px solid black;
+        border-bottom: 2px solid $primary;
         padding: 18px;
         font-size: 32px;
+        color: $primary;
       }
 
     }
