--- a/src/app/shared/scss/_nav.scss
+++ b/src/app/shared/scss/_nav.scss
@@ -1,6 +1,11 @@
 .navbar {
     margin-bottom: 0;
     z-index: 1;
+    border: none;
+
+    @media screen and (max-width: $screen-sm-max) {
+        background-color: $primary-dark;
+    }
 
     .nav-brand {
         float: left;
@@ -24,11 +29,33 @@
         margin: 0;
         padding: 0;
         text-align: right;
+
+        @media screen and (max-width: $screen-sm-max) {
+            position: absolute;
+            text-align: center;
+            top: 41px;
+            right: 0;
+            width: 100%;
+            background-color: $primary-dark;
+            overflow: hidden;
+        }
+    }
+
+    ul.collapse {
+        display: block;
+    }
+
+    ul.in {
+        height: 274px !important;
     }
 
     ul li {
         list-style: none;
         display: inline-block;
+
+        @media screen and (max-width: $screen-sm-max) {
+            display: block;
+        }
     }
 
     ul li > a {
@@ -45,7 +72,7 @@
     ul li > a:hover {
         color: $accent-hover;
     }
-    
+
     ul li > a.active {
         color: $accent-hover;
     }
@@ -87,20 +114,6 @@
         border: 1px solid $primary;
         color: $primary;
         margin-top: 10px;
-    }
-    .navbar-collapse {
-        background: grey;
-        margin-top: 15px;
-        position: absolute;
-        left: 0;
-        width: 100%;
-    }
-    .navbar-collapse a {
-        color: $primary;
-        margin: 20px;
-    }
-    .navbar-collapse a:hover {
-        text-decoration: none;
     }
 }
 
