--- a/src/main.css
+++ b/src/main.css
@@ -7917,11 +7917,16 @@ hr {
 /* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .navbar {
   margin-bottom: 0;
-  z-index: 1; }
-  /* line 5, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  z-index: 1;
+  border: none; }
+  @media screen and (max-width: 991px) {
+    /* line 1, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+    .navbar {
+      background-color: #81888D; } }
+  /* line 10, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .nav-brand {
     float: left; }
-  /* line 8, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 13, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .nav-brand-logo {
     color: #FFFFFF;
     line-height: 51px;
@@ -7929,22 +7934,42 @@ hr {
     letter-spacing: 2px;
     transition: 0.5s ease-in;
     text-decoration: none; }
-  /* line 16, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 21, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .nav-brand-logo:hover {
     color: #D75C37; }
-  /* line 19, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 24, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .nav-brand-logo.active {
     color: #D75C37; }
-  /* line 23, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 28, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar ul {
     margin: 0;
     padding: 0;
     text-align: right; }
-  /* line 29, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+    @media screen and (max-width: 991px) {
+      /* line 28, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+      .navbar ul {
+        position: absolute;
+        text-align: center;
+        top: 41px;
+        right: 0;
+        width: 100%;
+        background-color: #81888D;
+        overflow: hidden; } }
+  /* line 44, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  .navbar ul.collapse {
+    display: block; }
+  /* line 48, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  .navbar ul.in {
+    height: 274px !important; }
+  /* line 52, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar ul li {
     list-style: none;
     display: inline-block; }
-  /* line 34, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+    @media screen and (max-width: 991px) {
+      /* line 52, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+      .navbar ul li {
+        display: block; } }
+  /* line 61, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar ul li > a {
     color: #FFFFFF;
     cursor: pointer;
@@ -7954,66 +7979,52 @@ hr {
     text-decoration: none;
     text-transform: uppercase;
     transition: 0.5s all; }
-  /* line 45, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 72, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar ul li > a:hover {
     color: #D75C37; }
-  /* line 49, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 76, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar ul li > a.active {
     color: #D75C37; }
-  /* line 53, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 80, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .open > .btn-primary.dropdown-toggle {
     background: transparent;
     border: none; }
-  /* line 60, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 87, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-group,
   .navbar .btn:active,
   .navbar .btn-group.open .dropdown-toggle {
     box-shadow: none;
     outline: none; }
-  /* line 65, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 92, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-primary {
     color: #FFFFFF;
     font-size: 16px;
     text-transform: uppercase;
     padding-left: 48px; }
-  /* line 71, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 98, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-primary:hover {
     color: #D75C37; }
-  /* line 78, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 105, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .btn-primary,
   .navbar .btn-primary:active,
   .navbar .btn-primary:hover,
   .navbar .btn-primary:focus {
     border-color: transparent;
     background: transparent; }
-  /* line 83, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 110, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .fa {
     padding: 5px; }
-  /* line 86, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+  /* line 113, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
   .navbar .fa-lg {
     border: 1px solid #FFFFFF;
     color: #FFFFFF;
     margin-top: 10px; }
-  /* line 91, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-  .navbar .navbar-collapse {
-    background: grey;
-    margin-top: 15px;
-    position: absolute;
-    left: 0;
-    width: 100%; }
-  /* line 98, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-  .navbar .navbar-collapse a {
-    color: #FFFFFF;
-    margin: 20px; }
-  /* line 102, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
-  .navbar .navbar-collapse a:hover {
-    text-decoration: none; }
 
-/* line 107, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+/* line 120, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .dropdown-menu li a {
   text-transform: uppercase; }
 
-/* line 110, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
+/* line 123, /Users/David/Desktop/git/resume/src/app/shared/scss/_nav.scss */
 .dropdown-menu li a:hover {
   background: #D75C37; }
 
