made hero component, refactored all pages to use hero component

--- a/src/app/home/html/home.html
+++ b/src/app/home/html/home.html
@@ -1,6 +1,6 @@
 <div class="home">
 
-	<section class="hero">
+	<section class="hero mod-large">
 		<div class="overlay">
 			<div class="container">
 				<div class="content">
@@ -47,7 +47,7 @@
 
 	<section class="programmings">
 		<div class="container">
-			
+
 			<hr/>
 
 			<div class="row">
@@ -72,4 +72,3 @@
 	</section>
 
 </div>
-
