--- a/src/app/contact/scss/_contact.scss
+++ b/src/app/contact/scss/_contact.scss
@@ -1,40 +1,6 @@
 .contacts {
     .hero {
-        height: 320px;
-        margin-top: -55px;
-
-        .overlay {
-            background: rgba(0, 0, 0, .2);
-            height: 320px;
-        }
-
-        h1 {
-            color: $primary;
-            margin: 0;
-        }
-
-        @media screen and (max-width: $screen-sm-max) {
-            //background: url("../content/images/contact-phone.jpg");
-            //background-size: cover;
-
-            h1 {
-                text-align: center;
-                margin-top: 167.5px;
-            }
-        }
-
-        @media screen and (min-width: $screen-md-min) {
-            //background: url("../content/images/contact-desktop.jpg");
-            //background-size: cover;
-            @include gradient-horizontal($accent-hover, $primary-light);
-
-            h1 {
-                font-size: 90px;
-                line-height: 320px;
-                padding-top: 70px;
-                text-shadow: 4px 3px 0 #313436, 9px 8px 0 rgba(0, 0, 0, 0.15);
-            }
-        }
+        @include gradient-horizontal($accent-hover, $primary-light);
     }
 
     .contacts-info {
@@ -49,7 +15,7 @@
         background: $primary-light;
 
         &:hover {
-          background: #de6262;
+          backgrond: $accent-hover;
         }
       }
 
