--- a/src/app/shared/scss/_global.scss
+++ b/src/app/shared/scss/_global.scss
@@ -3,20 +3,24 @@ html {
     overflow-y: scroll;
 }
 
-html, 
-body { 
-	height: 100%; 
+html,
+body {
+	height: 100%;
 	background: $primary;
 }
 
-hr { 
+hr {
 	height: 0;
 	border-top: 1px solid $divider;
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
-* {	
+* {
 	font-family: 'Roboto', sans-serif;
-	margin: 0; 
+	margin: 0;
+}
+
+section {
+    overflow: hidden;
 }
