--- a/src/main.scss
+++ b/src/main.scss
@@ -9,41 +9,16 @@
 
 // Core CSS
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/scaffolding";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/type";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/code";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/grid";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tables";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/forms";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/buttons";
 
 // Components
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/component-animations";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/dropdowns";
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/button-groups";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/input-groups";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navs";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/navbar";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/breadcrumbs";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/pagination";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/pager";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/labels";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/badges";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/jumbotron";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/thumbnails";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/alerts";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/progress-bars";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/media";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/list-group";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/panels";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/responsive-embed";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/wells";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/close";
 
 // Components w/ JavaScript
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/modals";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/tooltip";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/popovers";
-@import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/carousel";
 
 // Utility classes
 @import "../bower_components/bootstrap-sass/assets/stylesheets/bootstrap/utilities";
@@ -52,15 +27,16 @@
 
 // App specific
 @import "app/shared/scss/color";
-@import "app/about/scss/about";
-@import "app/contact/scss/contact";
-@import "app/home/scss/home";
-@import "app/projects/scss/projects";
-@import "app/resume/scss/resume";
-@import "app/shared/scss/circle";
+@import "app/shared/scss/modal";
+@import "app/shared/scss/hero";
 @import "app/shared/scss/footer";
 @import "app/shared/scss/global";
 @import "app/shared/scss/headings";
 @import "app/shared/scss/nav";
+@import "app/shared/scss/circle";
+
+@import "app/contact/scss/contact";
+@import "app/home/scss/home";
+@import "app/projects/scss/projects";
+@import "app/resume/scss/resume";
 @import "app/tic-tac-toe/scss/tic-tac-toe";
-@import "app/shared/scss/modal";
