--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -1,7 +1,7 @@
-<section class="projects">
-	<div class="hero">
+<div class="projects">
+	<section class="hero">
 		<div class="overlay">
-			<div class="container"> 
+			<div class="container">
 				<div class="row">
 					<div class="col-md-12">
 						<h1>Projects</h1>
@@ -9,5 +9,5 @@
 				</div>
 			</div>
 		</div>
-	</div>	
-</section>
+	</section>
+</div>
