moved card class into its own component file

--- a/src/app/contact/html/contact.html
+++ b/src/app/contact/html/contact.html
@@ -11,29 +11,29 @@
         </div>
     </section>
 
-<section class="contacts-info">
+<section class="card-section">
     <div class="container">
         <div class="row">
             <div class="col-md-4">
-              <div class="info-container">
+              <div class="card-container">
                 <a href="https://www.linkedin.com/pub/yanwen-wang/63/550/3b4">
-                    <p>LinkedIn</p>
-                    <i class="fa fa-linkedin-square fa-3x"></i>
+                    <p class="card-container-header">LinkedIn</p>
+                    <i class="card-container-logo fa fa-linkedin-square fa-3x"></i>
                 </a>
               </div>
             </div>
             <div class="col-md-4">
-              <div class="info-container">
+              <div class="card-container">
                   <a href="https://github.com/Yanwenwang">
-                    <p>Github</p>
-                    <i class="fa fa-github-square fa-3x"></i>
+                    <p class="card-container-header">Github</p>
+                    <i class="card-container-logo fa fa-github-square fa-3x"></i>
                   </a>
               </div>
             </div>
             <div class="col-md-4">
-                <div class="info-container">
-                    <p>Email</p>
-                    <i class="fa fa-envelope-o fa-3x"></i>
+                <div class="card-container">
+                    <p class="card-container-header">Email</p>
+                    <i class="card-container-logo fa fa-envelope-o fa-3x"></i>
                 </div>
             </div>
         </div>
