added tic tac toe and sudoku cards to projects page

--- a/src/app/projects/html/projects.html
+++ b/src/app/projects/html/projects.html
@@ -1,4 +1,5 @@
 <div class="projects">
+
 	<section class="hero">
 		<div class="overlay">
 			<div class="container">
@@ -10,4 +11,28 @@
 			</div>
 		</div>
 	</section>
+
+	<section class="card-section">
+	    <div class="container">
+	        <div class="row">
+	            <div class="col-md-6">
+	              <div class="card-container">
+	                <a href="#/tic-tac-toe">
+	                    <p class="card-container-header">Tic Tac Toe</p>
+	                    <i class="card-container-logo fa fa-th fa-3x"></i>
+	                </a>
+	              </div>
+	            </div>
+	            <div class="col-md-6">
+	              <div class="card-container">
+	                  <a>
+	                    <p class="card-container-header">Sudouku</p>
+	                    <i class="card-container-logo fa fa-puzzle-piece fa-3x"></i>
+	                  </a>
+	              </div>
+	            </div>
+	        </div>
+	    </div>
+	</section>
+
 </div>
