--- a/src/main.scss
+++ b/src/main.scss
@@ -34,6 +34,7 @@
 @import "app/shared/scss/headings";
 @import "app/shared/scss/nav";
 @import "app/shared/scss/circle";
+@import "app/shared/scss/card";
 
 @import "app/contact/scss/contact";
 @import "app/home/scss/home";
