--- a/src/app/shared/scss/_card.scss
+++ b/src/app/shared/scss/_card.scss
@@ -2,6 +2,10 @@
     text-align: center;
     padding: 120px 0;
 
+    @media screen and (max-width: $screen-sm-max) {
+        padding: 32px 0;
+    }
+
     .card-container {
         height: 360px;
         width: 260px;
@@ -11,6 +15,10 @@
 
         &:hover {
             background: $accent-hover;
+        }
+
+        @media screen and (max-width: $screen-sm-max) {
+            margin: 32px 0;
         }
     }
 
